fix fontsize, mejora version mobile, añade version desktop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,16 +18,20 @@
     --warning: #FF9800;
     --info: #00BCD4;
 
-    --base: 16px;
+    --font-size-calc: calc(15px + 0.390625vw);
 
-    --xl: calc((20px / var(--base)) * 1rem);
-    --lg: ((18px / var(--base)) * 1rem);
-    --md: ((16px / var(--base)) * 1rem);
-    --sm: ((14px / var(--base)) * 1rem);
+    --xl: 1.6rem;
+    --lg: 1.3rem;
+    --md: 1rem;
+    --sm: 0.8rem;
 }
 
 *{
     font-family: sans-serif, Arial, Helvetica;
+}
+
+html{
+    font-size: var(--font-size-calc);
 }
 
 body{
@@ -75,6 +79,7 @@ a{
 }
 
 .alert{
+    padding: 0 1rem;
     min-height: 3rem;
     border-radius: 4px;
     margin: 1rem 0;
@@ -83,6 +88,7 @@ a{
     justify-content: center;
     font-weight: bold;
     font-size: var(--md);
+    align-self: center;
 }
 .bg-warning.alert::before{
     font-family: "Font Awesome 6 Free";
@@ -95,117 +101,20 @@ a{
     background-color: var(--warning);
 }
 
-/* nav */
-nav{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    padding: 1rem;
-    box-sizing: border-box;
-    background-color: var(--black-100);
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    transition: all 400ms;
-}
-
-nav h3,
-nav h2,
-nav li{
-    color: var(--black-10)
-}
-
-nav h3{
-    margin-bottom: .3rem;
-}
-nav p{
-    color: var(--black-30);
-    margin: 0;
-}
-
-nav ul{
-    width: 100%;
-    flex: 1;
-    position: relative;
-}
-nav a{
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: var(--black-50);
-    box-shadow: 0 0 0 4px var(--shadow-black);
-    border-radius: 50%;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--black-10);
-    z-index: 1;
-    transition-duration: 400ms;
-    transition-property: transform, width, height, box-shadow, opacity, visibility, color;
-    outline: none;
-}
-nav a:hover,
-nav a:focus{
-    color: var(--primary-color);
-    box-shadow: 0 0 0 4px var(--shadow-primary);
-}
-nav li:first-of-type a{
-    z-index: 2;
-    transition: all 300ms;
-}
-nav #menu:target li a{
-    opacity: 100%;
-    visibility: visible;
-}
-nav #menu #close-menu{
-    opacity: 0%;
-    visibility: hidden;
-    transition-property: width, height, box-shadow, opacity, visibility, color;
-}
-nav #menu:target #close-menu{
-    transform: scale(50%) translate(-50%, -50%);
-    transform-origin: top left;
-    opacity: 100%;
-    visibility: visible;
-}
-nav #menu:target li:first-of-type a:first-of-type{
-    opacity: 0%;
-    visibility: hidden;
-}
-nav #menu:target li:nth-of-type(2) a{
-    transform: translate(-50%, -150%)
-}
-nav #menu:target li:nth-of-type(3) a{
-    transform: translate(50%, -80%);
-}
-nav #menu:target li:nth-of-type(4) a{
-    transform: translate(10%, 30%);
-}
-nav #menu:target li:nth-of-type(5) a{
-    transform: translate(-110%, 30%);
-}
-nav #menu:target li:nth-of-type(6) a{
-    transform: translate(-150%, -80%);
-}
 
 /* header */
 header{
-    padding: .5rem 1rem;
+    max-height: 4.3rem;
+    padding: .2rem 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
     background-color: var(--black-10);
     border-bottom: 1px solid var(--primary-color-dark);
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 header h1{
     margin: 0;
@@ -224,6 +133,112 @@ header a:focus,
 header a:hover i,
 header a:focus i{
     color: var(--primary-color);
+}
+
+/* nav */
+#nav-mobile{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    padding: 1rem;
+    box-sizing: border-box;
+    background-color: var(--black-100);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transition-duration: 400ms;
+    transition-property: opacity, visibility, position;
+}
+#nav-desktop{
+    display: none;
+}
+
+#nav-mobile h3,
+#nav-mobile h2,
+#nav-mobile li{
+    color: var(--black-10)
+}
+
+#nav-mobile h3{
+    margin-bottom: .3rem;
+}
+#nav-mobile p{
+    color: var(--black-30);
+    margin: 0;
+}
+
+#nav-mobile ul{
+    width: 100%;
+    flex: 1;
+    position: relative;
+}
+#nav-mobile a{
+    width: 6.25rem;
+    height: 6.25rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--black-50);
+    box-shadow: 0 0 0 4px var(--shadow-black);
+    border-radius: 50%;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--black-10);
+    z-index: 1;
+    transition-duration: 400ms;
+    transition-property: width, height, transform, width, height, box-shadow, opacity, visibility, color;
+    outline: none;
+}
+#nav-mobile a:hover,
+#nav-mobile a:focus{
+    color: var(--primary-color);
+    box-shadow: 0 0 0 4px var(--shadow-primary);
+}
+#nav-mobile li:first-of-type a{
+    z-index: 2;
+    transition: all 300ms;
+}
+#nav-mobile #menu:target li a{
+    opacity: 100%;
+    visibility: visible;
+}
+#nav-mobile #menu #close-menu{
+    opacity: 0%;
+    visibility: hidden;
+    transition-property: width, height, box-shadow, opacity, visibility, color;
+}
+#nav-mobile #menu:target #close-menu{
+    transform: scale(50%) translate(-50%, -50%);
+    transform-origin: top left;
+    opacity: 100%;
+    visibility: visible;
+}
+#nav-mobile #menu:target li:first-of-type a:first-of-type{
+    opacity: 0%;
+    visibility: hidden;
+}
+#nav-mobile #menu:target li:nth-of-type(2) a{
+    transform: translate(-50%, -150%)
+}
+#nav-mobile #menu:target li:nth-of-type(3) a{
+    transform: translate(50%, -80%);
+}
+#nav-mobile #menu:target li:nth-of-type(4) a{
+    transform: translate(10%, 30%);
+}
+#nav-mobile #menu:target li:nth-of-type(5) a{
+    transform: translate(-110%, 30%);
+}
+#nav-mobile #menu:target li:nth-of-type(6) a{
+    transform: translate(-150%, -80%);
 }
 
 /* main */
@@ -247,7 +262,7 @@ main ul{
 }
 /* sections */
 section{
-    width: 100%;
+    width: 0;
     height: 0;
     padding: 0 1rem;
     display: flex;
@@ -255,10 +270,12 @@ section{
     visibility: hidden;
     opacity: 0;
     box-sizing: border-box;
-    transition: opacity 800ms ease-in-out;
+    transition-duration: 800ms;
+    transition-property: left, top, transform, opacity, visiblitity;
 }
 section:target{
     visibility: visible;
+    width: 100%;
     height: initial;
     opacity: 100%;
 }
@@ -324,7 +341,7 @@ footer{
     flex-direction: column;
     background-color: var(--black-30);
     border-top: 1px solid var(--primary-color-dark);
-    padding: .5rem 0 0;
+    padding: .5rem 0 .3rem 0;
 }
 footer ul{
     display: flex;
